Fixing layout on mobile

--- a/src/components/Molecules/InteractiveCreditCardNumber/InteractiveCreditCardNumber.scss
+++ b/src/components/Molecules/InteractiveCreditCardNumber/InteractiveCreditCardNumber.scss
@@ -5,8 +5,8 @@
   margin-bottom: 25px;
 
   @media screen and (max-width: 481px) {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 25px;
+    margin-bottom: 25px;
     p {
       font-size: 15px !important;
     }
